--- a/ScheduleV/index.html
+++ b/ScheduleV/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <script src="script.ts"></script>
+    <link rel="stylesheet" src="styles.css">
+</head>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<body>
 
 </body>
 </html>
