--- a/ScheduleV/index.html
+++ b/ScheduleV/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="script.ts"></script>
+    <script type="module">
+        import {loadModule} from 'https://klesun.github.io/ts-browser/src/ts-browser.js';
+        // language=file-reference
+        const entryScriptPath = './script.ts';
+        loadModule(entryScriptPath).then(indexModule => {
+            return indexModule.default(document.getElementById('composeCont'));
+        });
+    </script>
+    
     <link rel="stylesheet" src="styles.css">
 </head>
 
