--- a/ScheduleV/index.html
+++ b/ScheduleV/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script type="module">
         import {loadModule} from 'https://klesun.github.io/ts-browser/src/ts-browser.js';
         // language=file-reference
